# solidity

./: Changelog.md
libdevcore/: CMakeLists.txt  CommonData.h
libjulia/optimiser/: ExpressionSimplifier.cpp  ExpressionSimplifier.h  FullInliner.cpp  FullInliner.h  SimplificationRules.cpp  SimplificationRules.h
libsolidity/: CMakeLists.txt
libsolidity/analysis/: TypeChecker.cpp
libsolidity/formal/: SolverInterface.h
scripts/: install_deps.sh
test/libjulia/: YulOptimizerTest.cpp
test/libjulia/yulOptimizerTests/fullInliner/: inside_condition.yul
test/tools/: CMakeLists.txt  afl_fuzzer.cpp  const_opt_target.cpp  constopt.h  fuzzer.cpp  fuzzer.h  fuzzer_common.cpp  fuzzer_common.h  solc_target.cpp  yulopti.cpp  yulopti_target.cpp
test/tools/ossfuzz/: CMakeLists.txt  README.md  YulProtoFuzzer.cpp  const_opt_ossfuzz.cpp  const_opt_target.cpp  protoToYul.cpp  protoToYul.h  proto_to_yul.cpp  proto_to_yul.h  sol_proto.proto  solc_noopt_ossfuzz.cpp  solc_noopt_target.cpp  solc_opt_ossfuzz.cpp  solc_opt_target.cpp  yulFuzzerCommon.cpp  yulProto.proto  yulProto_diff_ossfuzz.cpp  yul_proto.proto  yulopti_target.cpp
test/tools/ossfuzz/protomutators/: YulProtoMutator.cpp  YulProtoMutator.h
